# ivpsnr

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  configure_and_build.bat  configure_and_build.sh  configure_build_and_test.bat  configure_build_and_test.sh  configure_for_developement.bat  configure_for_developement.sh
apps/IVPSNR/: CMakeLists.txt
apps/IVPSNR/src/: main_Dispatch.cpp  main_IVPSNR.cpp
apps/QMIV/: CMakeLists.txt  TargetSources.cmake
apps/QMIV/src/: main_QMIV.cpp  xAppQMIV.cpp  xAppQMIV.h
cmake/: MicroarchFeatureLevels.cmake  doctest.cmake  fmtlib.cmake
example/: .gitattributes  Fencing_v8_objectsMask_1920x1080_yuv420p.yuv  Fencing_v8_origJpgCompressed_1920x1080_yuv420p.yuv  Fencing_v8_original_1920x1080_yuv420p.yuv  Fencing_v8_synthesized_1920x1080_yuv420p.yuv  README.md  calculate_IV-PSNR.bat  calculate_IV-PSNR.sh
libs/pmbb-base/: CMakeLists.txt  LICENSE  TargetSources.cmake
libs/pmbb-base/src/: xCfgINI.cpp  xCfgINI.h  xCommonDefPMBB-BASE.h  xDispatch.h  xFile.cpp  xFile.h  xMemory.cpp  xMemory.h  xProcInfo.cpp  xProcInfo.h  xString.cpp  xString.h
libs/pmbb-base/test/: test-base.cpp
libs/pmbb-core/: CMakeLists.txt  TargetSources.cmake
libs/pmbb-core/src/: xColorSpace.h  xColorSpaceAVX.cpp  xColorSpaceAVX.h  xColorSpaceAVX512.cpp  xColorSpaceAVX512.h  xColorSpaceCoeff.cpp  xColorSpaceCoeff.h  xColorSpaceSSE.cpp  xColorSpaceSSE.h  xColorSpaceSTD.cpp  xColorSpaceSTD.h  xCommonDefCORE.h  xCommonDefPMBB-CORE.h  xDistortion.h  xDistortionAVX.cpp  xDistortionAVX.h  xDistortionAVX512.cpp  xDistortionAVX512.h  xDistortionSSE.cpp  xDistortionSSE.h  xDistortionSTD.cpp  xDistortionSTD.h  xEvent.h  xFmtScn.cpp  xFmtScn.h  xHelpersSIMD.h  xMathUtils.cpp  xMathUtils.h  xMiscUtilsCORE.cpp  xMiscUtilsCORE.h  xMiscUtilsPMBB-CORE.cpp  xMiscUtilsPMBB-CORE.h  xPic.cpp  xPic.h  xPicCommon.cpp  xPicCommon.h  xPixelOps.h  xPixelOpsAVX.cpp  xPixelOpsAVX.h  xPixelOpsAVX512.cpp  (+18 more)
libs/pmbb-core/test/: test-core-xColorspace.cpp  test-core-xDistortion.cpp  test-core-xMathUtils.cpp  test-core-xPixelOps.cpp  test-core.cpp
libs/pmbb-ivpsnr/: CMakeLists.txt  TargetSources.cmake
libs/pmbb-ivpsnr/src/: xBaseIV.cpp  xBaseIV.h  xCommonDefIVPSNR.h  xCorrespPixelShift.cpp  xCorrespPixelShift.h  xCorrespPixelShiftSSE.cpp  xCorrespPixelShiftSSE.h  xCorrespPixelShiftSTD.cpp  xCorrespPixelShiftSTD.h  xGlobalColorShift.cpp  xGlobalColorShift.h  xIVPSNR.cpp  xIVPSNR.h  xIVPSNRM.cpp  xMetricCommon.h  xPSNR.cpp  xPSNR.h  xWSPSNR.cpp  xWSPSNR.h
libs/pmbb-ivqm/: CMakeLists.txt  TargetSources.cmake
libs/pmbb-ivqm/src/: xCommonDefIVQM.h  xCorrespPixelShift.cpp  xCorrespPixelShift.h  xCorrespPixelShiftSSE.cpp  xCorrespPixelShiftSSE.h  xCorrespPixelShiftSTD.cpp  xCorrespPixelShiftSTD.h  xGlobClrDiff.cpp  xGlobClrDiff.h  xIVPSNR.cpp  xIVPSNR.h  xIVPSNRM.cpp  xMetricCommon.cpp  xMetricCommon.h  xPSNR.cpp  xPSNR.h  xSSIM.cpp  xSSIM.h  xShftCompPic.cpp  xShftCompPic.h  xStructSim.cpp  xStructSim.h  xStructSimConsts.h  xWSPSNR.cpp  xWSPSNR.h  xWeightedSpherically.cpp  xWeightedSpherically.h
libs/pmbb-spng/: CMakeLists.txt  TargetSources.cmake
libs/pmbb-spng/src/: xCommonDefSPNG.h  xSeqPNG.cpp  xSeqPNG.h
